example/sidecar-cr.yaml
apiVersion: incubation.jingnanzhou.io/v1alpha1
kind: Sidecar
metadata:
  name: sidecar-injector-webhook-configmap
  labels:
    app: sidecar

spec:
  dataType: inject
  data:
    config: |-
      containers:
        - name: sidecar-nginx
          image: nginx:1.12.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-configmap

    values: ""
